k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-app
  template:
    metadata:
      labels:
        app: resume-app
    spec:
      containers:
      - name: resume-app
        image: meghana1298/meghana-resume:v9
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
