k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  type: ClusterIP
  selector:
    app: resume-app
  ports:
  - port: 80
    targetPort: 3000
